generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                   String        @id @default(uuid())
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt
  deletedAt            DateTime?

  name                 String
  password_hash        String
  email                String
  phone                String
  city              String

  rating_sum           Float
  rating_count         Int
  image                String?
  fundsAccount         FundsAccount?
  CounterOffer         CounterOffer[]
}

model Offer {
  id             String        @id @default(uuid())
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
  deletedAt      DateTime?

  item           Item     @relation(fields: [itemId], references: [id])
  itemId         String   @unique
  price          Decimal
  image          String

  buyerId        String?
  buyerName      String?

  userName       String
  userId         String
}

model FundsAccount {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id])
  userId    String   @unique
  balance   Decimal
  balanceBlocked Decimal
}

model CounterOffer {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  offerId   String
 
  status    Boolean?
  price    Decimal
  items   Item[]
}

model Item {
  id       String   @id @default(uuid())
  offerId   String  @unique
  offer    Offer?   
  userId   String
  name     String
  description String
  category String
  counterOffer CounterOffer @relation(fields: [counterOfferId], references: [id])
  counterOfferId String
  image    String
  status   Boolean?
}
