@startuml P2P Marketplace

entity Offer {
    * id: <<uuid>>
    --
    * userId: <<FK>>
    * price: decimal
    * createdAt: datetime
    * itemId: <<FK>>
    * sellerId: <<FK>>
    * buyerId: <<FK>>
    transactionId: <<FK>>
    updatedAt: datetime
    deletedAt: datetime
}

entity Item{
     * id: <<uuid>>
    --
    * userId: <<FK>>
    * name: string
    * description: string
    * categoryId: <<FK>>
    * createdAt: datetime
    * isAvailable: boolean
    * img: str
    updatedAt: datetime
    deletedAt: datetime
}

entity Category{
    * id: <<uuid>>
    --
    *name: string
}

entity User {
    * id: <<uuid>>
    --
    * name: string
    * password_hash: string
    * email: string
    * phone: string
    * city: string
    * createdAt: datetime
    * rating_sum: float
    * rating_count: int
    * image: <<url>>
/'    freshest token + valid_until ?? '/
    updatedAt: datetime
    deletedAt: datetime
}

entity FundsAccount {
    * id: <<uuid>>
    --
    * userId: <<FK>>
    * balance: decimal
    * balanceBlocked: decimal
/'    * currency: string '/
    * createdAt: datetime
    updatedAt: datetime
}

entity CounterOffer {
    *id: <<uuid>>
    --
    *offerId: <<FK>>
    *userId: <<FK>>
    items: Item[]
    payment: decimal
    *status: string
    *createdAt: datetime
    updatedAt: datetime
    deletedAt: datetime
}

User  ||--o{ Offer : offers  
User  ||--|| FundsAccount : owns
Offer ||--o{ CounterOffer : has
User  ||--o{ Item : owns
Offer ||--|| Item: has
CounterOffer ||--o{ Item: has

@enduml